--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Ювелирная мастерская</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="icon" href="https://cdn-icons-png.freepik.com/512/10347/10347873.png">
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -25,10 +26,11 @@
 </head>
 
 <body>
-    <div class="container-xl custom-container p-0">
+    <div class="container-fluid custom-container p-0">
 
         <header>
             <img src="./img/background/header_bg.jpg" class="img-fluid" alt="background">
+            <h1>Долго, дорого, богато!</h1>
 
             <nav class="navbar navbar-expand-lg navbar-light bg-none">
                 <div class="container-fluid">
@@ -41,13 +43,13 @@
                     <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent">
                         <ul class="navbar-nav mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Контрагентам</a>
+                                <a class="nav-link" aria-current="page" href="#">Контрагентам</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Дизайнерам</a>
+                                <a class="nav-link" aria-current="page" href="#">Дизайнерам</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Вакансии</a>
+                                <a class="nav-link" aria-current="page" href="#">Вакансии</a>
                             </li>
                         </ul>
                         <a class="navbar-brand" href="#">
@@ -60,6 +62,7 @@
                     </div>
                 </div>
             </nav>
+
 
         </header>
         <main>
